商家中心修改+撤单修改

--- a/src/components/BusinessCenter/BusinessCenter.html
+++ b/src/components/BusinessCenter/BusinessCenter.html
@@ -335,7 +335,7 @@
   <!--确认购买弹框-->
   <div v-if="submitBuyBoxFlag" class="submit-buy-window">
     <div class="submit-buy-box border_radius">
-      <div class="submit-buy-title strong text_dark" >确定买入</div>
+      <div class="submit-buy-title strong" >确定买入</div>
       <div class="submit-buy-list">
 <!--        <div class="submit-buy-item">-->
 <!--          <div class="submit-buy-item-left text_grey_8 strong">价格设置：</div>-->
@@ -357,7 +357,7 @@
           <div class="submit-buy-item-left text_grey_8 strong">价格：</div>
           <div class="submit-buy-item-right border_radius submit-buy-item-right-border">
             <span class="text_green margin_right">{{buyInputPrice}}</span>
-            <span class="text_absolute text_grey_8">CNY</span>
+            <span class="text_absolute">CNY</span>
           </div>
         </div>
 
@@ -365,7 +365,7 @@
           <div class="submit-buy-item-left text_grey_8 strong">数量：</div>
           <div class="submit-buy-item-right border_radius submit-buy-item-right-border">
             <span class="text_dark margin_right">{{buyInputNum}}</span>
-            <span class="text_absolute text_grey_8">USDT</span>
+            <span class="text_absolute">USDT</span>
           </div>
         </div>
 
@@ -373,7 +373,7 @@
           <div class="submit-buy-item-left text_grey_8 strong">金额：</div>
           <div class="submit-buy-item-right border_radius submit-buy-item-right-border">
             <span class="text_green margin_right">{{buyInputMoney}}</span>
-            <span class="text_absolute text_grey_8">CNY</span>
+            <span class="text_absolute">CNY</span>
           </div>
         </div>
 
@@ -381,7 +381,7 @@
           <div class="submit-buy-item-left text_grey_8 strong">单笔最小：</div>
           <div class="submit-buy-item-right border_radius submit-buy-item-right-border">
             <span class="text_dark margin_right">{{buyInputMinNum}}</span>
-            <span class="text_absolute text_grey_8">USDT</span>
+            <span class="text_absolute">USDT</span>
           </div>
         </div>
 
@@ -389,7 +389,7 @@
           <div class="submit-buy-item-left text_grey_8 strong">单笔最大：</div>
           <div class="submit-buy-item-right border_radius submit-buy-item-right-border">
             <span class="text_dark margin_right">{{buyInputMaxNum}}</span>
-            <span class="text_absolute text_grey_8">USDT</span>
+            <span class="text_absolute">USDT</span>
           </div>
         </div>
 
@@ -421,7 +421,7 @@
   <!--确认删除弹框-->
   <div v-if="submitSellBoxFlag" class="submit-buy-window">
     <div class="submit-buy-box border_radius">
-      <div class="submit-buy-title strong text_dark" >确定卖出</div>
+      <div class="submit-buy-title strong" >确定卖出</div>
       <div class="submit-buy-list">
 <!--        <div class="submit-buy-item">-->
 <!--          <div class="submit-buy-item-left text_grey_8 strong">价格设置：</div>-->
@@ -443,7 +443,7 @@
           <div class="submit-buy-item-left text_grey_8 strong">价格：</div>
           <div class="submit-buy-item-right border_radius submit-buy-item-right-border">
             <span class="text_red margin_right">{{sellInputPrice}}</span>
-            <span class="text_absolute text_grey_8">CNY</span>
+            <span class="text_absolute ">CNY</span>
           </div>
         </div>
 
@@ -451,7 +451,7 @@
           <div class="submit-buy-item-left text_grey_8 strong">数量：</div>
           <div class="submit-buy-item-right border_radius submit-buy-item-right-border">
             <span class="text_dark margin_right">{{sellInputNum}}</span>
-            <span class="text_absolute text_grey_8">USDT</span>
+            <span class="text_absolute ">USDT</span>
           </div>
         </div>
 
@@ -459,7 +459,7 @@
           <div class="submit-buy-item-left text_grey_8 strong">金额：</div>
           <div class="submit-buy-item-right border_radius submit-buy-item-right-border">
             <span class="text_red margin_right">{{sellInputMoney}}</span>
-            <span class="text_absolute text_grey_8">CNY</span>
+            <span class="text_absolute ">CNY</span>
           </div>
         </div>
 
@@ -467,7 +467,7 @@
           <div class="submit-buy-item-left text_grey_8 strong">单笔最小：</div>
           <div class="submit-buy-item-right border_radius submit-buy-item-right-border">
             <span class="text_dark margin_right">{{sellInputMinNum}}</span>
-            <span class="text_absolute text_grey_8">USDT</span>
+            <span class="text_absolute ">USDT</span>
           </div>
         </div>
 
@@ -475,7 +475,7 @@
           <div class="submit-buy-item-left text_grey_8 strong">单笔最大：</div>
           <div class="submit-buy-item-right border_radius submit-buy-item-right-border">
             <span class="text_dark margin_right">{{sellInputMaxNum}}</span>
-            <span class="text_absolute text_grey_8">USDT</span>
+            <span class="text_absolute ">USDT</span>
           </div>
         </div>
 
