--- a/src/components/BusinessCenter/BusinessCenter.css
+++ b/src/components/BusinessCenter/BusinessCenter.css
@@ -522,7 +522,7 @@
 }
 
 .submit-buy-box {
-  width: 750px;
+  width: 550px;
   position: absolute;
   left: 50%;
   top: 50%;
@@ -535,10 +535,12 @@
   line-height: 68px;
   font-size: 16px;
   text-align: center;
+  color: #172A4D;
 }
 
 .submit-buy-list {
-  padding: 0 160px;
+  padding: 0 90px;
+  padding-left: 50px;
 }
 
 .submit-buy-item {
@@ -581,7 +583,7 @@
 }
 
 .submit-buy-item-right-border {
-  border: 1px solid #ccc;
+  border: 1px solid #E0E1F4;
 
   padding-left: 14px;
 }
@@ -592,6 +594,7 @@
   right: 10px;
   top: 50%;
   transform: translateY(-50%);
+  color: #A2B5D9;
 }
 
 .submit-buy-item-right-img-zfb {
@@ -603,7 +606,7 @@
   height: 80px;
   display: flex;
   justify-content: space-between;
-  padding: 0 220px;
+  padding: 0 140px;
   align-items: center;
 }
 
