--- a/src/components/Header/Header.html
+++ b/src/components/Header/Header.html
@@ -1195,23 +1195,23 @@
                 </span>
                   <!--隐藏的标签 begin-->
                   <!--  sss 屏蔽-->
-<!--                  <ul class="flex navigation-item-hidden-erwm">-->
-<!--                    <li class="navigation-item-hidden-erwm-item">-->
-<!--                      <div class="download-left-download-item-qrcode-img">-->
-<!--                        <Qrcode-->
-<!--                          :size="size"-->
-<!--                          :value="value"-->
-<!--                          :logo="logo"-->
-<!--                          :bgColor="bgColor"-->
-<!--                          :fgColor="fgColor"-->
-<!--                        >-->
-<!--                        </Qrcode>-->
-<!--                      </div>-->
-<!--                    </li>-->
-<!--                    <li class="navigation-item-hidden-erwm-item" >-->
-<!--                      <span>iOS & Android {{$t('qrCode')}}</span>-->
-<!--                    </li>-->
-<!--                  </ul>-->
+                  <ul class="flex navigation-item-hidden-erwm">
+                    <li class="navigation-item-hidden-erwm-item">
+                      <div class="download-left-download-item-qrcode-img">
+                        <Qrcode
+                          :size="size"
+                          :value="value"
+                          :logo="logo"
+                          :bgColor="bgColor"
+                          :fgColor="fgColor"
+                        >
+                        </Qrcode>
+                      </div>
+                    </li>
+                    <li class="navigation-item-hidden-erwm-item" >
+                      <span>iOS & Android {{$t('qrCode')}}</span>
+                    </li>
+                  </ul>
                   <!--  sss 屏蔽结束-->
                   <!--隐藏的标签 end-->
                 </li>
