商家中心提示语修改

--- a/src/components/BusinessCenter/BusinessCenter.html
+++ b/src/components/BusinessCenter/BusinessCenter.html
@@ -393,9 +393,9 @@
           </div>
         </div>
 
-        <div class="submit-buy-item">
+        <div class="submit-buy-item margin_top">
           <div class="submit-buy-item-left text_grey_8 strong">支付方式：</div>
-          <div class="submit-buy-item-right">
+          <div class="submit-buy-item-right text_dark">
 <!--            <img class="submit-buy-item-right-img-zfb" src="../../assets/c2c_center_buy/bank_icon.png" alt="">-->
             {{(defaultBank.bankName || '银行卡')}}
             <!--{{(defaultBank.bankName || '银行卡') + '（' + defaultBank.hiddenBankNumber + '）'}}-->
@@ -479,9 +479,9 @@
           </div>
         </div>
 
-        <div class="submit-buy-item">
+        <div class="submit-buy-item margin_top">
           <div class="submit-buy-item-left text_grey_8 strong">支付方式：</div>
-          <div class="submit-buy-item-right">
+          <div class="submit-buy-item-right text_dark">
 <!--            <img class="submit-buy-item-right-img-zfb" src="../../assets/c2c_center_buy/bank_icon.png" alt="">-->
             {{(defaultBank.bankName || '银行卡')}}
             <!--{{(defaultBank.bankName || '银行卡') + '（' + defaultBank.hiddenBankNumber + '）'}}-->
