--- a/src/components/BusinessCenter/BusinessCenter.html
+++ b/src/components/BusinessCenter/BusinessCenter.html
@@ -531,7 +531,9 @@
       <!--未绑定 弹框提示 begin-->
     <BasePopupWindow :open="authStatePopupWindow" :close="closeAuthStatePopupWindow">
       <div slot="header" class="auth-state-header">
-        安全提示
+          安全提示
+          <img src="../../assets/PopupWindowCancelled.png" alt="" class="pointer" @click="closePopWindow">
+
       </div>
       <div slot="article" class="auth-state-article">
         <template v-if="authStatePopupType==1">
@@ -541,7 +543,7 @@
         </template>
         <template v-if="authStatePopupType==2">
           <div class="auth-state-row flex">
-            请绑定手机或者谷歌验证
+            请绑定手机或绑定谷歌
           </div>
         </template>
 
