--- a/src/components/OrderConduct/OrderConduct.html
+++ b/src/components/OrderConduct/OrderConduct.html
@@ -105,7 +105,7 @@
 
         <div v-if="list.length == 0 && !loading" class="pending-body-no-pending-box">
           <img class="pending-body-no-pending-img" src="../../assets/c2c_transaction/no_pending_notice_img.png" alt="">
-          <div class="pending-body-no-pending-text">暂无挂单</div>
+          <div class="pending-body-no-pending-text">暂无订单</div>
         </div>
     </div>
   </div>
