订单取消加载更多

--- a/src/components/OrderCancel/OrderCancel.html
+++ b/src/components/OrderCancel/OrderCancel.html
@@ -57,10 +57,19 @@
     </div>
   </div>
   <!-- 分页插件 start  v-if="maxPage > 1" -->
-  <BasePageBar v-if="maxPage > 1" :maxPage='maxPage'
-               :selectIndex="selectIndex"
-               :clickChangePage="clickChangePage"
-               :currentDisplay=2
-               :initDisplay=2></BasePageBar>
+<!--  <BasePageBar v-if="maxPage > 1" :maxPage='maxPage'-->
+<!--               :selectIndex="selectIndex"-->
+<!--               :clickChangePage="clickChangePage"-->
+<!--               :currentDisplay=2-->
+<!--               :initDisplay=2></BasePageBar>-->
   <!-- 分页插件 end -->
+
+
+  <!-- 加载更多 如果loading结束、已经登录、获取的数据超过了limit，则显示 begin -->
+  <template v-if="showLoadingMore && !loading">
+    <li class="loading-more">
+      <span class="text_blue pointer" v-if="!loadingMoreShow" @click="clickLoadingMore">加载更多</span>
+      <span class="text_blue" v-else>{{$t('orderPageHistoricalEntrustment.close_11')}}</span>
+    </li>
+  </template>
 </div>
