--- a/src/components/OrderComplete/OrderComplete.css
+++ b/src/components/OrderComplete/OrderComplete.css
@@ -80,3 +80,16 @@
   outline: 0;
   cursor: pointer;
 }
+.loading-more {
+  width: 100%;
+  height: 50px;
+  line-height: 50px;
+  text-align: center;
+  color: #3576F5;
+  position: relative;
+  list-style-type:none;
+}
+
+.loading-more span {
+  cursor: pointer;
+}
