--- a/src/components/OrderConduct/OrderConduct.css
+++ b/src/components/OrderConduct/OrderConduct.css
@@ -430,3 +430,16 @@
   color: #d4d4d4;
 
 }
+.loading-more {
+  width: 100%;
+  height: 50px;
+  line-height: 50px;
+  text-align: center;
+  color: #3576F5;
+  position: relative;
+  list-style-type:none;
+}
+
+.loading-more span {
+  cursor: pointer;
+}
