订单银行卡号不**

--- a/src/components/OrderDetails/OrderDetails.css
+++ b/src/components/OrderDetails/OrderDetails.css
@@ -49,9 +49,9 @@
 	color: #C43E4E;
 }
 
-.go_history:hover{
-	color: #C43E4E;
-}
+/*.go_history:hover{*/
+/*	color: #C43E4E;*/
+/*}*/
 
 .go_history1{
   font-family: PingFangSC-Medium;
