--- a/src/components/PaymentSet/PaymentSet.css
+++ b/src/components/PaymentSet/PaymentSet.css
@@ -797,6 +797,14 @@
 /*未绑定 弹框提示 begin*/
 .auth-state-header {
   width: 400px;
+  line-height: 60px;
+  justify-content: space-between;
+}
+
+.auth-state-header img {
+  width: 16px;
+  float: right;
+  margin-top: 22px;
 }
 
 .auth-state-article {
