出售商家名字屏蔽

--- a/src/components/TransactionSell/TransactionSell.html
+++ b/src/components/TransactionSell/TransactionSell.html
@@ -128,9 +128,9 @@
             <div :class="'yansebj'+Math.round(Math.random()*3)">{{(item.nickname).substring(0,1)}}</div>
             <div style="width: 52px;position: absolute;bottom: -1px;background: #fff;height: 1px;"></div>
           </div>
-          <div class="nameColor">
-            {{item.nickname}}
-          </div>
+<!--          <div class="nameColor">-->
+<!--            {{item.nickname}}-->
+<!--          </div>-->
         </div>
          <!--  成交单数-->
           <div class="type text_dark14">{{item.cmpOrder}}</div>
