修改商家提示信息

--- a/src/components/BusinessCenter/BusinessCenter.html
+++ b/src/components/BusinessCenter/BusinessCenter.html
@@ -121,9 +121,10 @@
           <img class="fee-rate-img" src="./assets/fee_tips_icon.png"/>
         </div>
         <div class="fee-tips-box fee-tips-box-buy">
-          <div>1.手续费：商家买单收取挂单数量的千分之一，在成交后扣除；</div>
-          <div>2.实际到账数量为：成交数量减去手续费后的余额；</div>
-          <div>3.手续费收取：每成交一笔，按实际成交的千分之一收取。</div>
+          <div>1.手续费：商家买单按照一定比例收取手续费，在成交时同步扣除；</div>
+          <div>2.实际到账数量：成交数量减去手续费后的余额；</div>
+          <div>3.手续费收取：每成交一笔，按照成交数量的一定比例收取；</div>
+          <div>4.手续费减免：推广期间，免除商家挂单手续费。</div>
         </div>
       </div>
     </div>
@@ -236,10 +237,11 @@
           <img class="fee-rate-img" src="./assets/fee_tips_icon.png"/>
         </div>
         <div class="fee-tips-box fee-tips-box-sell">
-          <div>1.手续费：商家卖单收取挂单数量的千分之一，在挂单时直接冻结；</div>
-          <div>2.实际可售卖数量为：挂单数量减去手续费后的余额；</div>
-          <div>3.手续费收取：每成交一笔，按实际成交的千分之一收取；</div>
-          <div>4.手续费返还：商家撤单后未成交数量的手续费返还至法币账户。</div>
+          <div>1.手续费：商家卖单按照一定比例收取手续费，在挂单时同时冻结手续费；</div>
+          <div>2.实际冻结量：挂单数量+一定比例的手续费；</div>
+          <div>3.手续费收取：每成交一笔，按照成交数量的一定比例收取；</div>
+          <div>4.手续费返还：撤单后，未成交数量的对应手续费余额返还至法币账户中；</div>
+          <div>5.手续费减免：手续费从除挂单数量后的剩余可用余额中冻结，推广期间，免除商家挂单手续费。</div>
         </div>
       </div>
 
