--- a/src/components/OrderDetails/OrderDetails.css
+++ b/src/components/OrderDetails/OrderDetails.css
@@ -334,14 +334,12 @@
 .no_btc_eth_tips{
   overflow: hidden;
   width: 1200px;
-  height: 123px;
+  /*height: 123px;*/
   background: #F2F6FA;
   border: 1px solid #E7EBEE;
   border-radius: 2px;
-  padding-top: 20px;
-  padding-bottom: 0px;
-  /*margin-bottom: -25px;*/
   padding: 27px;
+  padding-bottom: 10px;
   margin-left: -37px;
   color: #172A4D;
 }
