--- a/src/components/OrderDetails/OrderDetails.html
+++ b/src/components/OrderDetails/OrderDetails.html
@@ -183,7 +183,10 @@
             </div>
           </div>
           <div class="no_btc_eth_tips">
-            付款时请备注付款码，请不要备注比特币、以太坊、BTC、ETH、USDT、数字货币、区块链等敏感词汇，否则银行卡会有被冻结风险，请谨慎操作。
+<!--            付款时请备注付款码，请不要备注比特币、以太坊、BTC、ETH、USDT、数字货币、区块链等敏感词汇，否则银行卡会有被冻结风险，请谨慎操作。-->
+            请使用手机银行或网上银行给卖家进行转账，转账时请不要备注类似：比特币、以太坊、数字货币、BTC、ETH、USDT等信息，
+            否则银行卡有可能被银行冻结，转账完成后，请点击“确认已付款”，收款后卖家会放币。未转账付款给卖家之前，请勿点击“确认已付款”，
+            未付款之前，恶意点击，遭到投诉，平台将冻结账户。
 
             <div class="order_tips">
               <div class="order_times">
@@ -247,7 +250,7 @@
 <!--							</span>-->
                 <!-- 其他订单详情界面 end -->
               </div>
-              <div class="order_btns" v-if="detail_type == 1">
+              <div class="order_btns" v-if="detail_type == 1 || detail_type == 4">
                 <button class="btns order_cannel border_radius" @click="ORDER_CANNEL" v-if="ctc_order.sellerId != userId && !paying">取消订单</button>
 <!--                <button class="btns order_cannel border_radius" @click="ORDER_CANNEL" v-if="ctc_order.sellerId == userId && paying">取消订单</button>-->
                 <!-- 有无付款 start -->
