--- a/src/components/OrderDetails/OrderDetails.html
+++ b/src/components/OrderDetails/OrderDetails.html
@@ -184,10 +184,9 @@
           </div>
           <div class="no_btc_eth_tips">
 <!--            付款时请备注付款码，请不要备注比特币、以太坊、BTC、ETH、USDT、数字货币、区块链等敏感词汇，否则银行卡会有被冻结风险，请谨慎操作。-->
-            请使用手机银行或网上银行给卖家进行转账，转账时请不要备注类似：比特币、以太坊、数字货币、BTC、ETH、USDT等信息，
-            否则银行卡有可能被银行冻结，转账完成后，请点击“确认已付款”，收款后卖家会放币。未转账付款给卖家之前，请勿点击“确认已付款”，
-            未付款之前，恶意点击，遭到投诉，平台将冻结账户。
-
+            <p>1.请使用手机银行或网上银行给卖家进行转账，账完成后，请点击“确认已付款”，收款后卖家会放币；</p>
+            <p>2.转账时请不要备注类似：比特币、以太坊、数字货币、BTC、ETH、USDT等信息，否则银行卡有被冻结的风险；</p>
+            <p>3.未转账付款给卖家之前，请勿点击“确认已付款”，未付款之前，恶意点击，遭到投诉，平台将冻结账户处理。</p>
             <div class="order_tips">
               <div class="order_times">
                 <!-- 收付款详情界面 start -->
