修改注意事项样式

--- a/src/components/BusinessApplication/BusinessApplication.html
+++ b/src/components/BusinessApplication/BusinessApplication.html
@@ -86,7 +86,7 @@
         提交申请
       </div>
       <div class="bussiness_small4 btn_blue_disabled" v-if="auth_info.audits == 0">
-        审核中
+        待审核
       </div>
 
       <!--<div class="bussiness_small4 btn_blue" @click="APPLY_SUBMIT" v-if="!APPLY_SUBMIT">提交申请</div>-->
